# image-annotator-rust

./: .gitignore  Cargo.toml  README.md  output.json
.github/workflows/: binary-release.yml  compile.yml  release.yml
src/: img_visualizer.rs  main.rs  render_image.rs
