[package]
name = "annotator-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "*", features=["derive"]}
iced = { version = "*", features = ["image", "debug"] }
iced_style = "*"
iced_core = "*"
iced_native = "*"
itertools = "*"
reqwest = { version = "*", features = ["blocking"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls"] }
serde_json = "*"
notify-rust = "*"
rfd = "*"
imghdr = "*"
home = "*"
once_cell = "*"
chrono = "0.4.23"
image = "*"
