[package]
name = "annotator-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features=["derive"]}
iced = { version = "0.10.0", features = ["image", "debug"] }
iced_style = "0.9.0"
iced_core = "0.10.0"
iced_native = "0.10.3"
itertools = "0.12.1"
reqwest = { version = "0.11.24", features = ["blocking"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls"] }
serde_json = "1.0"
notify-rust = "4.10.0"
iced_widget = "0.1.3"
rfd = "0.13.0"
imghdr = "0.7.0"
home = "0.5.9"
once_cell = "1.19.0"
chrono = "0.4.33"
image = "0.24.8"
